--- a/SpecularDependance.ipynb
+++ b/SpecularDependance.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PTE Dependence on Reflector Specular Ratio\n",
+    "Authors: Luc Barrett, Loick Marion\n",
+    "\n",
+    "In the calculation of specular vs diffuse ratios, its assumed it has a linear effect on PTE value (first order approximation). To investigate if this is a good assumption, this notebook will sweep specular ratios and calculate the PTE, and plot the result so it can be evaluated if a linear approximation is appropriate. If not more complex optimization methods may be needed to determine these ratios."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,6 +20,13 @@
     "from analysis.run_manager import run_manager\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metadata and Info"
    ]
   },
   {
@@ -29,6 +46,13 @@
     "label = \"silicon-upper-8reflector\"\n",
     "\n",
     "exclusions = [f\"reflector{i}\" for i in exclusion]  # map to name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run Simulations"
    ]
   },
   {
@@ -84,6 +108,13 @@
    "source": [
     "print(ptes)\n",
     "print(ptes_err)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Results"
    ]
   },
   {
